--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="nav">
     <h3>Sium Company</h3>
-    <h3>SCROLLbARDAIMPLEMENTARE</h3>
+    <progress value="1" max="100"></progress>
     <h3>BOH</h3>
   </div>
 
@@ -53,7 +53,7 @@
         alt="">
     </div>
 
-      <div class="sezR_right">
+    <div class="sezR_right">
       <h1>SICUREZZA E CRITTOGRAFIA</h1>
       <p>
         Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo
@@ -68,9 +68,11 @@
 
 
 
-
-  <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+  <script src="script.js"></script>
+
 </body>
 
 </html>
