--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="sezL">
+  <div class="sezL sez">
     <div class="sezL_left">
       <h1>SICUREZZA E CRITTOGRAFIA</h1>
       <p>
@@ -44,8 +44,42 @@
         alt="">
     </div>
   </div>
+  <!-- This square could be in a div but I'm quite lazy -->
+  <div class="sez_list_right sez">
+<h1>LE PRINCIPALI MINACCE INFORMATICHE</h1>
+    <div class="list_elements">
+      <div class="list_container_LEFT_CONTAINER">  <div class="square"></div>
+</div>
+    <div class="list_container_RIGHT_CONTAINER">
+    <div class="list_element">
+      <h2>Virus, Worms, Trojan:</h2>
+      <p>Malware che danneggiano o rallentano i sistemi.</p>
+    </div>
+    <div class="list_element">
+      <h2>Software spyware:</h2>
+      <p> software maligno che raccoglie informazioni senza autorizzazione.</p>
+    </div>
+    <div class="list_element">
+      <h2>Zero-day Attack:</h2>
+      <p>attacco su vulnerabilità sconosciute agli sviluppatori.</p>
+    </div>
+    <div class="list_element">
+      <h2>Denial of Service:</h2>
+      <p>attacco che blocca un servizio saturando server o rete con traffico eccessivo.</p>
+    </div>
+    <div class="list_element">
+      <h2>Intercettazione e Furto di dati:</h2>
+      <p>accesso illecito ai dati, passivo se limitato alla lettura, attivo se comporta modifica.</p>
+    </div>
 
-  <div class="sezR">
+    <div class="list_element">
+      <h2>Furto delle credenziali:</h2>
+      <p>attacco effettuato tramite phishing o bruteforce, finalizzato al furto d'identità.</p>
+    </div>
+    </div>
+    </div>
+    </div>
+  <div class="sezR sez">
 
     <div class="sezR_left">
       <img
@@ -69,8 +103,8 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/MotionPathPlugin.min.js"></script>
   <script src="script.js"></script>
 
 </body>
