--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     </div>
     </div>
-  <div class="sez sezR sez">
+  <div class="sez sezR">
 
     <div class="sezR_left">
       <img
