Adding more stuff

--- a/index.html
+++ b/index.html
@@ -56,26 +56,37 @@
       <h2>Virus, Worms, Trojan:</h2>
       <p>Malware che danneggiano o rallentano i sistemi.</p>
     </div>
+        <div class="line"></div>
     <div class="list_element">
       <h2>Software spyware:</h2>
       <p> software maligno che raccoglie informazioni senza autorizzazione.</p>
     </div>
+        <div class="line"></div>
+
     <div class="list_element">
       <h2>Zero-day Attack:</h2>
       <p>attacco su vulnerabilità sconosciute agli sviluppatori.</p>
     </div>
+            <div class="line"></div>
+
     <div class="list_element">
       <h2>Denial of Service:</h2>
       <p>attacco che blocca un servizio saturando server o rete con traffico eccessivo.</p>
     </div>
+            <div class="line"></div>
+
     <div class="list_element">
       <h2>Intercettazione e Furto di dati:</h2>
       <p>accesso illecito ai dati, passivo se limitato alla lettura, attivo se comporta modifica.</p>
     </div>
+            <div class="line"></div>
+
 
     <div class="list_element">
       <h2>Furto delle credenziali:</h2>
       <p>attacco effettuato tramite phishing o bruteforce, finalizzato al furto d'identità.</p>
+              <div class="line"></div>
+
     </div>
     </div>
     </div>
@@ -101,6 +112,51 @@
   </div>
 
 
+  <div class="sez sez_center">
+    <h1>La Crittografia</h1>
+    <p>La crittografia (dal greco <em>kryptós</em> = “nascosto”, <em>graphía</em> = “scrittura”) trasforma i messaggi in crittogrammi illeggibili senza autorizzazione.  
+  Il <code>plaintext</code> si trasforma in <code>ciphertext</code> grazie a una o più chiavi, che devono rimanere segrete per mantenere private le comunicazioni anche su canali pubblici.</p>
+</p>
+<h2>Cifrari Storici</h2>
+<div class="cifrari_holder">
+
+
+  <div class="cifrario_box">
+  <div class="cifrario">
+    <img
+        src="substitution.png"
+        alt="">
+    <h2>CIFRARIO A SOSTITUZIONE</h2>
+    <div class="line"></div>
+     <p>Sostituisce ogni carattere alfabetico. <br>Un esempio è il cifrario di Cesare.</p>
+    
+  </div>
+  <div class="cifrario_shadow"></div>
+  </div>
+
+
+
+  <div class="cifrario_box">
+  <div class="cifrario">
+    <img
+        src="transposition.png"
+        alt="">
+    <h2>CIFRARIO A TRASPOSIZIONE</h2>
+    <div class="line"></div>
+    <p>Permuta l'insieme di caratteri.</p>
+    
+  </div>
+  <div class="cifrario_shadow"></div>
+  </div>
+
+
+
+
+</div>
+<p>Entrambe richiedono una chiave comune tra mittente e destinatario (crittografia simmetrica), ma sono vulnerabili ad analisi e attacchi.</p>
+  </div>
+
+  
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
