--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <progress id="myBar" value="1" max="100"></progress>
     <h3>BOH</h3>
   </div>
-
+  <div id="smooth-wrapper">
+    <div id="smooth-content">
   <div class="intro">
     <div class="title">
       <h1>SICUREZZA</h1>
@@ -113,7 +114,7 @@
 
 
   <div class="sez sez_center">
-    <h1>La Crittografia</h1>
+    <h1>Crittografia</h1>
     <p>La crittografia (dal greco <em>kryptós</em> = “nascosto”, <em>graphía</em> = “scrittura”) trasforma i messaggi in crittogrammi illeggibili senza autorizzazione.  
   Il <code>plaintext</code> si trasforma in <code>ciphertext</code> grazie a una o più chiavi, che devono rimanere segrete per mantenere private le comunicazioni anche su canali pubblici.</p>
 </p>
@@ -155,8 +156,13 @@
 </div>
 <p>Entrambe richiedono una chiave comune tra mittente e destinatario (crittografia simmetrica), ma sono vulnerabili ad analisi e attacchi.</p>
   </div>
+  <div class="workaround"></div>
+  </div>
+  </div>
 
-  
+  <script src="scramble_text.js"></script>
+    <script src="scroll_smoother.js"></script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/ScrollTrigger.min.js"></script>
