Fixed the porcodio
si:((((

--- a/index.html
+++ b/index.html
@@ -18,150 +18,154 @@
   </div>
   <div id="smooth-wrapper">
     <div id="smooth-content">
-  <div class="intro">
-    <div class="title">
-      <h1>SICUREZZA</h1>
-      <h1>NEL WEB</h1>
-    </div>
-    <div class="subtitle">
-      <h3>THE POWER</h3>
-      <h3>OF SIUM</h3>
-    </div>
-  </div>
+      <div class="intro">
+        <div class="title">
+          <h1>SICUREZZA</h1>
+          <h1>NEL WEB</h1>
+        </div>
+        <div class="subtitle">
+          <h3>THE POWER</h3>
+          <h3>OF SIUM</h3>
+        </div>
+      </div>
 
-  <div class="sezL sez">
-    <div class="sezL_left">
-      <h1>SICUREZZA E CRITTOGRAFIA</h1>
-      <p>
-        Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo
-        informazioni personali e aziendali online. Proteggere dispositivi e dati da accessi non autorizzati è
-        essenziale, sia a livello personale che aziendale. Vulnerabilità come sistemi non aggiornati, password deboli e
-        disattenzioni degli utenti possono esporre i sistemi ad attacchi informatici.
-        La sicurezza informatica mira a prevenire questi attacchi, impiegando normative, tecniche, dispositivi e
-        protocolli per salvaguardare persone, dati e infrastrutture.</p>
-    </div>
-    <div class="sezL_right">
-      <img
-        src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
-        alt="">
-    </div>
-  </div>
-  <!-- This square could be in a div but I'm quite lazy -->
-  <div class="sez_list_right sez">
-<h1>LE PRINCIPALI MINACCE INFORMATICHE</h1>
-    <div class="list_elements">
-      <div class="list_container_LEFT_CONTAINER">  <div class="square"></div>
-</div>
-    <div class="list_container_RIGHT_CONTAINER">
-    <div class="list_element">
-      <h2>Virus, Worms, Trojan:</h2>
-      <p>Malware che danneggiano o rallentano i sistemi.</p>
-    </div>
-        <div class="line"></div>
-    <div class="list_element">
-      <h2>Software spyware:</h2>
-      <p> software maligno che raccoglie informazioni senza autorizzazione.</p>
-    </div>
-        <div class="line"></div>
+      <div class="sezL sez">
+        <div class="sezL_left">
+          <h1>SICUREZZA E CRITTOGRAFIA</h1>
+          <p>
+            Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo
+            informazioni personali e aziendali online. Proteggere dispositivi e dati da accessi non autorizzati è
+            essenziale, sia a livello personale che aziendale. Vulnerabilità come sistemi non aggiornati, password
+            deboli e
+            disattenzioni degli utenti possono esporre i sistemi ad attacchi informatici.
+            La sicurezza informatica mira a prevenire questi attacchi, impiegando normative, tecniche, dispositivi e
+            protocolli per salvaguardare persone, dati e infrastrutture.</p>
+        </div>
+        <div class="sezL_right">
+          <img
+            src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
+            alt="">
+        </div>
+      </div>
+      <!-- This square could be in a div but I'm quite lazy -->
+      <div class="sez_list_right sez">
+        <div class="title_list">
+          <h1>LE PRINCIPALI MINACCE INFORMATICHE</h1>
 
-    <div class="list_element">
-      <h2>Zero-day Attack:</h2>
-      <p>attacco su vulnerabilità sconosciute agli sviluppatori.</p>
-    </div>
+        </div>
+        <div class="list_elements">
+          <div class="list_container_LEFT_CONTAINER">
+            <div class="square"></div>
+          </div>
+          <div class="list_container_RIGHT_CONTAINER">
+            <div class="list_element">
+              <h2>Virus, Worms, Trojan:</h2>
+              <p>Malware che danneggiano o rallentano i sistemi.</p>
+            </div>
+            <div class="line"></div>
+            <div class="list_element">
+              <h2>Software spyware:</h2>
+              <p> software maligno che raccoglie informazioni senza autorizzazione.</p>
+            </div>
             <div class="line"></div>
 
-    <div class="list_element">
-      <h2>Denial of Service:</h2>
-      <p>attacco che blocca un servizio saturando server o rete con traffico eccessivo.</p>
-    </div>
+            <div class="list_element">
+              <h2>Zero-day Attack:</h2>
+              <p>attacco su vulnerabilità sconosciute agli sviluppatori.</p>
+            </div>
             <div class="line"></div>
 
-    <div class="list_element">
-      <h2>Intercettazione e Furto di dati:</h2>
-      <p>accesso illecito ai dati, passivo se limitato alla lettura, attivo se comporta modifica.</p>
-    </div>
+            <div class="list_element">
+              <h2>Denial of Service:</h2>
+              <p>attacco che blocca un servizio saturando server o rete con traffico eccessivo.</p>
+            </div>
+            <div class="line"></div>
+
+            <div class="list_element">
+              <h2>Intercettazione e Furto di dati:</h2>
+              <p>accesso illecito ai dati, passivo se limitato alla lettura, attivo se comporta modifica.</p>
+            </div>
             <div class="line"></div>
 
 
-    <div class="list_element">
-      <h2>Furto delle credenziali:</h2>
-      <p>attacco effettuato tramite phishing o bruteforce, finalizzato al furto d'identità.</p>
+            <div class="list_element">
+              <h2>Furto delle credenziali:</h2>
+              <p>attacco effettuato tramite phishing o bruteforce, finalizzato al furto d'identità.</p>
               <div class="line"></div>
 
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="sez sezR">
+
+        <div class="sezR_left">
+          <img
+            src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
+            alt="">
+        </div>
+
+        <div class="sezR_right">
+          <h1>Come proteggersi da queste minacce?</h1>
+          <p>
+          <ol>
+            <li>Segretezza:</li>solo mittente e destinatario possono leggere i dati.
+            <li>Autenticazione:</li>conferma dell’identità di chi comunica.
+            <li>Integrità:</li>garanzia che i dati non siano stati alterati.
+          </ol>
+          </p>
+        </div>
+      </div>
+
+
+      <div class="sez sez_center">
+        <h1>At%$!Hj'-c4S</h1>
+        <p>La crittografia (dal greco <em>kryptós</em> = “nascosto”, <em>graphía</em> = “scrittura”) trasforma i
+          messaggi in crittogrammi illeggibili senza autorizzazione.
+          Il <code>plaintext</code> si trasforma in <code>ciphertext</code> grazie a una o più chiavi, che devono
+          rimanere segrete per mantenere private le comunicazioni anche su canali pubblici.</p>
+        </p>
+        <h2>Cifrari Storici</h2>
+        <div class="cifrari_holder">
+
+
+          <div class="cifrario_box">
+            <div class="cifrario">
+              <img src="substitution.png" alt="">
+              <h2>CIFRARIO A SOSTITUZIONE</h2>
+              <div class="line"></div>
+              <p>Sostituisce ogni carattere alfabetico. <br>Un esempio è il cifrario di Cesare.</p>
+
+            </div>
+            <div class="cifrario_shadow"></div>
+          </div>
+
+
+
+          <div class="cifrario_box">
+            <div class="cifrario">
+              <img src="transposition.png" alt="">
+              <h2>CIFRARIO A TRASPOSIZIONE</h2>
+              <div class="line"></div>
+              <p>Permuta l'insieme di caratteri.</p>
+
+            </div>
+            <div class="cifrario_shadow"></div>
+          </div>
+
+
+
+
+        </div>
+        <p>Entrambe richiedono una chiave comune tra mittente e destinatario (crittografia simmetrica), ma sono
+          vulnerabili ad analisi e attacchi.</p>
+      </div>
+      <div class="workaround"></div>
     </div>
-    </div>
-    </div>
-    </div>
-  <div class="sez sezR">
-
-    <div class="sezR_left">
-      <img
-        src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
-        alt="">
-    </div>
-
-    <div class="sezR_right">
-      <h1>Come proteggersi da queste minacce?</h1>
-      <p>
-      <ol>               
-        <li>Segretezza:</li>solo mittente e destinatario possono leggere i dati.
-        <li>Autenticazione:</li>conferma dell’identità di chi comunica.
-        <li>Integrità:</li>garanzia che i dati non siano stati alterati.
-      </ol>
-      </p>
-    </div>
-  </div>
-
-
-  <div class="sez sez_center">
-    <h1>At%$!Hj'-c4S</h1>
-    <p>La crittografia (dal greco <em>kryptós</em> = “nascosto”, <em>graphía</em> = “scrittura”) trasforma i messaggi in crittogrammi illeggibili senza autorizzazione.  
-  Il <code>plaintext</code> si trasforma in <code>ciphertext</code> grazie a una o più chiavi, che devono rimanere segrete per mantenere private le comunicazioni anche su canali pubblici.</p>
-</p>
-<h2>Cifrari Storici</h2>
-<div class="cifrari_holder">
-
-
-  <div class="cifrario_box">
-  <div class="cifrario">
-    <img
-        src="substitution.png"
-        alt="">
-    <h2>CIFRARIO A SOSTITUZIONE</h2>
-    <div class="line"></div>
-     <p>Sostituisce ogni carattere alfabetico. <br>Un esempio è il cifrario di Cesare.</p>
-    
-  </div>
-  <div class="cifrario_shadow"></div>
-  </div>
-
-
-
-  <div class="cifrario_box">
-  <div class="cifrario">
-    <img
-        src="transposition.png"
-        alt="">
-    <h2>CIFRARIO A TRASPOSIZIONE</h2>
-    <div class="line"></div>
-    <p>Permuta l'insieme di caratteri.</p>
-    
-  </div>
-  <div class="cifrario_shadow"></div>
-  </div>
-
-
-
-
-</div>
-<p>Entrambe richiedono una chiave comune tra mittente e destinatario (crittografia simmetrica), ma sono vulnerabili ad analisi e attacchi.</p>
-  </div>
-  <div class="workaround"></div>
-  </div>
   </div>
 
   <script src="scramble_text.js"></script>
-    <script src="scroll_smoother.js"></script>
+  <script src="scroll_smoother.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
@@ -169,6 +173,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/MotionPathPlugin.min.js"></script>
   <script src="script.js"></script>
   <script src="fitText.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/TextPlugin.min.js"></script>
 </body>
 
 </html>
