--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
       <div class="sezL sez">
         <div class="sezL_left">
-          <h1>SICUREZZA E CRITTOGRAFIA</h1>
-          <p>
+          <h1 class="h1_L">SICUREZZA E CRITTOGRAFIA</h1>
+          <p class="p_L">
             Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo
             informazioni personali e aziendali online. Proteggere dispositivi e dati da accessi non autorizzati è
             essenziale, sia a livello personale che aziendale. Vulnerabilità come sistemi non aggiornati, password
@@ -44,13 +44,15 @@
         <div class="sezL_right">
           <img
             src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
-            alt="">
+            alt=""
+            class="img_L">
+            
         </div>
       </div>
       <!-- This square could be in a div but I'm quite lazy -->
       <div class="sez_list_right sez">
         <div class="title_list">
-          <h1>LE PRINCIPALI MINACCE INFORMATICHE</h1>
+          <h1 class="titleList">LE PRINCIPALI MINACCE INFORMATICHE</h1>
 
         </div>
         <div class="list_elements">
@@ -91,7 +93,7 @@
             <div class="list_element">
               <h2>Furto delle credenziali:</h2>
               <p>attacco effettuato tramite phishing o bruteforce, finalizzato al furto d'identità.</p>
-              <div class="line"></div>
+
 
             </div>
           </div>
@@ -101,19 +103,21 @@
 
         <div class="sezR_left">
           <img
+            class="img_R"
             src="https://imgs.search.brave.com/EWu16rJS75o1VzaQ1ZX5BB1GYIiywHp6ZEYJBge7sZM/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS50ZW5vci5jb20v/VDdwcE1xNGhoSklB/QUFBbS9nb29kLWJv/eS53ZWJw"
             alt="">
         </div>
 
         <div class="sezR_right">
-          <h1>Come proteggersi da queste minacce?</h1>
-          <p>
-          <ol>
-            <li>Segretezza:</li>solo mittente e destinatario possono leggere i dati.
-            <li>Autenticazione:</li>conferma dell’identità di chi comunica.
-            <li>Integrità:</li>garanzia che i dati non siano stati alterati.
-          </ol>
+          <h1 class="h1_R">Come proteggersi da queste minacce?</h1>
+          <p class="p_R">
+            <ol>
+              <li>Segretezza:</li>solo mittente e destinatario possono leggere i dati.
+              <li>Autenticazione:</li>conferma dell’identità di chi comunica.
+              <li>Integrità:</li>garanzia che i dati non siano stati alterati.
+            </ol>
           </p>
+
         </div>
       </div>
 
