--- a/index.html
+++ b/index.html
@@ -237,8 +237,28 @@ In questo modo si combina l'efficienza della crittografia simmetrica con la sicu
 </p>
         </div>
       
-    </div>
-  </div>
+   <div class="sezfinal sez">
+        <div class="sezfinal_left">
+                   <h1>
+Posta Elettronica Certificata
+          </h1>
+
+  
+
+          <p>Un sistema che garantisce valore legale alle email, come una raccomandata con ricevuta di ritorno. Utilizzata in Italia, Svizzera e Hong Kong, attesta l'invio, la ricezione e l'orario esatto di trasmissione. Per attivarla, bisogna rivolgersi a un ente accreditato che verifica l'identità del richiedente. Durante l'invio, la PEC applica una firma elettronica per assicurare l'autenticità del messaggio.</p>
+
+        </div>
+        <div class="sezfinal_right">
+          <h1>
+Certification Authority
+          </h1>
+
+          <p>Enti autorizzati che rilasciano certificati digitali, fondamentali per garantire l'identità degli utenti e dei server online. Operano seguendo norme europee e standard internazionali come X.509. I certificati digitali permettono di avviare comunicazioni sicure e cifrate, proteggendo i dati trasmessi. In Italia, l'accreditamento delle CA è gestito dall'AgID (Agenzia per l’Italia Digitale).</p>
+
+        </div>
+      </div>
+
+        
 
 
   <script src="scramble_text.js"></script>
