--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@
         <div class="sezL_left">
           <h1 class="h1_L">SICUREZZA E CRITTOGRAFIA</h1>
           <p class="p_L">
-            Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo
-            informazioni personali e aziendali online. Proteggere dispositivi e dati da accessi non autorizzati è
-            essenziale, sia a livello personale che aziendale. Vulnerabilità come sistemi non aggiornati, password
-            deboli e
-            disattenzioni degli utenti possono esporre i sistemi ad attacchi informatici.
-            La sicurezza informatica mira a prevenire questi attacchi, impiegando normative, tecniche, dispositivi e
-            protocolli per salvaguardare persone, dati e infrastrutture.</p>
+           Internet è parte integrante della nostra vita quotidiana: lavoriamo, effettuiamo pagamenti, gestiamo informazioni personali e aziendali online.  
+  <strong>Proteggere dispositivi e dati</strong> da accessi non autorizzati è essenziale, sia a livello personale che aziendale.  
+  Vulnerabilità come <strong>sistemi non aggiornati</strong>, <strong>password deboli</strong> e <strong>disattenzioni degli utenti</strong> possono esporre i sistemi ad <strong>attacchi informatici</strong>.  
+  La <strong>sicurezza informatica</strong> mira a <strong>prevenire</strong> questi attacchi, impiegando normative, tecniche, dispositivi e protocolli per salvaguardare persone, dati e infrastrutture.</p>
         </div>
         <div class="sezL_right">
           <img
@@ -154,19 +151,19 @@
 
 
 </div>
-<p>Entrambe richiedono una chiave comune tra mittente e destinatario (crittografia simmetrica), ma sono vulnerabili ad analisi e attacchi.</p>
+<p>Entrambe <strong>richiedono una chiave comune</strong> tra mittente e destinatario (crittografia simmetrica), ma sono <b>vulnerabili ad analisi e attacchi.</b></p>
 </div>
 
     <div class="sez_left_and_right sez">
     
       <h1 class="introtext">Crittografia Simmetrica Moderna</h1>
       <p class="introtext">
-        Oggi, per aumentare la sicurezza rispetto ai metodi storici si utilizzano cifrari a blocchi. Questi algoritmi operano non sui singoli caratteri, ma su interi blocchi di bit (tipicamente da 64 o 128 bit), rendendo molto più difficile l'analisi e la violazione dei messaggi cifrati.
+        Oggi, per aumentare la sicurezza rispetto ai metodi storici si utilizzano <b>cifrari a blocchi</b>. Questi algoritmi operano non sui singoli caratteri, ma su interi blocchi di bit (tipicamente da <code>64</code> o <code>128</code> <code>bit</code>), rendendo molto <b>più difficile l'analisi e la violazione dei messaggi</b> cifrati.
       </p><div class="left_and_right_text">
-        <div class="block1 Lblock left_and_right_block"><h2>DES:</h2><h3>(Data Encryption Standard)</h3><p>inventata negli anni '70, lavora su blocchi di 64 bit con una chiave effettiva di 56 bit. Oggi è considerato insicuro a causa della brevità della chiave, che può essere violata con attacchi a forza bruta.</p></div>
-        <div class="block2 Rblock left_and_right_block"><h2>3DES:</h2><h3>(Triple DES)</h3><p>versione potenziata del DES, applica il processo di cifratura tre volte con tre chiavi diverse.</p></div>
-        <div class="block3 Lblock left_and_right_block"><h2>AES:</h2><h3>(Advanced Encryption Standard)</h3><p>utilizza chiavi di 128, 192 o 256 bit e lavora su blocchi di 128 bit. </p></div>
-        <div class="block4 Rblock left_and_right_block"><h2>IDEA:</h2><h3>(International Data Encryption Algorithm)</h3><p>lavora su blocchi di 64 bit con chiavi di 128 bit.</p></div>
+        <div class="block1 Lblock left_and_right_block"><h2>DES:</h2><h3>(Data Encryption Standard)</h3><p>inventata negli anni '70, lavora su blocchi di <code>64 bit</code> con una chiave effettiva di <code>56 bit</code>. Oggi è <b>considerato insicuro a causa della brevità della chiave</b>, che può essere violata con attacchi a forza bruta.</p></div>
+        <div class="block2 Rblock left_and_right_block"><h2>3DES:</h2><h3>(Triple DES)</h3><p>versione potenziata del DES, applica il processo di cifratura <b>tre volte con tre chiavi diverse</b>.</p></div>
+        <div class="block3 Lblock left_and_right_block"><h2>AES:</h2><h3>(Advanced Encryption Standard)</h3><p>utilizza chiavi di <code>128</code>, <code>192</code> o <code>256 bit</code> e lavora su blocchi di <code>128 bit</code>. </p></div>
+        <div class="block4 Rblock left_and_right_block"><h2>IDEA:</h2><h3>(International Data Encryption Algorithm)</h3><p>lavora su blocchi di <code>64 bit</code> con chiavi di <code>128 bit</code>.</p></div>
         </div>
     </div>
     
@@ -231,7 +228,7 @@ Il mittente cifra il messaggio con la chiave pubblica del destinatario, che può
           </h1>
           <p class="tanim">Poiché gli algoritmi di crittografia asimmetrica sono molto più lenti rispetto a quelli simmetrici, in pratica si utilizza una crittografia ibrida: 
 il messaggio viene cifrato con un algoritmo simmetrico veloce, mentre la chiave di sessione usata per cifrarlo viene a sua volta cifrata con RSA (crittografia asimmetrica).
-In questo modo si combina l'efficienza della crittografia simmetrica con la sicurezza nello scambio delle chiavi garantita dalla crittografia asimmetrica.</p>
+ In questo modo si combina l'efficienza della crittografia simmetrica con la sicurezza nello scambio delle chiavi garantita dalla crittografia asimmetrica.</p>
             <h1 class="ranim">Le funzioni di Hash
           </h1>
           <p class="tanim">Le funzioni di hash vengono utilizzate per garantire l'integrità dei messaggi. Una funzione di hash trasforma un messaggio di qualsiasi lunghezza in una stringa a lunghezza fissa, non reversibile. Prima dell'invio, si calcola l’hash del messaggio, lo si cifra con la chiave privata del mittente e lo si allega al messaggio cifrato. Il destinatario, una volta ricevuto il messaggio, decifra l’hash con la chiave pubblica del mittente e lo confronta con l’hash calcolato dal messaggio ricevuto. Se i due valori coincidono, si ha la certezza che il messaggio non è stato alterato. Le funzioni di hash sono fondamentali anche per la gestione delle password: nei database, infatti, non viene salvata la password in chiaro, ma solo il suo hash. Durante l’accesso, l’hash della password inserita viene confrontato con quello salvato. In questo modo, nemmeno gli amministratori del sistema conoscono le password originali degli utenti.
