--- a/index.html
+++ b/index.html
@@ -171,16 +171,16 @@
     <div class="sezL_left fit_this">
       <h1>Scambio di Chiavi di Diffie-Hellman</h1>
       <p >
-      La crittografia simmetrica richiede che mittente e destinatario conoscano la stessa chiave segreta. Ma come scambiarsi la chiave in modo sicuro su un canale potenzialmente intercettato? Diffie e Hellman idearono un metodo che permette a due persone di creare una chiave segreta condivisa anche se comunicano attraverso un canale pubblico insicuro.
+      La crittografia simmetrica richiede che mittente e destinatario conoscano la stessa chiave segreta. Ma come scambiarsi la chiave in modo sicuro su un canale potenzialmente intercettato? <em>Diffie e Hellman</em> idearono un metodo che permette a due persone di creare una <b>chiave segreta condivisa anche se comunicano attraverso un canale pubblico insicuro</b>.
       <br><b style="font-size: 1.1em;">Come Funziona?</b><br>
       Alice sceglie un numero \(g\) generatore di \(p\). \(g\) è generatore di \(p\) se elevato alle sue potenze naturali può generare qualsiasi numero tra \(1\) e \(p-1\) modulo \(p\). Questo è necessario per poter resistere a potenziali attacchi brute-force.
       Alice sceglie un numero segreto \(a\).
-      Calcola \(A=g^a \mod p\). Da \(A\) è computazionalmente impossibile ricavare \(a\) a causa del problema del logaritmo discreto.
+      Calcola \(A=g^a \mod p\). Da \(A\) <b>è computazionalmente impossibile</b> ricavare \(a\) a causa del problema del logaritmo discreto.
       Alice invia \(A\), \(g\) e \(p\) a Bob, che sceglie un numero segreto \(b\).
       Bob calcola \(B=g^b \mod p\).
       Invia \(B\) ad Alice. 
       La chiave di Alice è \(K=B^a \mod p\), la chiave di Bob è \(K=A^b \mod p\). 
-      Per le proprietà delle potenze è possibile dimostrare che queste due chiavi sono identiche.
+      Per le proprietà delle potenze è possibile dimostrare che <b>queste due chiavi sono identiche.</b>
       
       </p>
       </div>
@@ -194,9 +194,9 @@
 
         <div class="sezR_left">
           <p>
-           Nel 1977, Ron Rivest, Adi Shamir e Leonard Adleman svilupparono l'algoritmo RSA.
-A differenza della crittografia simmetrica, che richiede una chiave segreta condivisa, la crittografia asimmetrica usa una coppia di chiavi:
-una pubblica, da distribuire liberamente, e una privata, da mantenere segreta.
+           Nel 1977, <em>Ron Rivest, Adi Shamir e Leonard Adleman</em> svilupparono l'<b>algoritmo RSA</b>.
+A differenza della crittografia simmetrica, che richiede una chiave segreta condivisa, la crittografia asimmetrica <b>usa una coppia di chiavi:</b>
+una <b>pubblica</b>, da distribuire liberamente, e una <b>privata</b>, da mantenere segreta.
 Il mittente cifra il messaggio con la chiave pubblica del destinatario, che può decifrarlo solo con la propria chiave privata.
           </p>
         </div>
@@ -218,7 +218,7 @@ Il mittente cifra il messaggio con la chiave pubblica del destinatario, che può
         <div class="sezR_right">
           <div class="trigger"></div>
           <h1>Come funziona l'algoritmo?</h1>
-          <p>Si scelgono due numeri primi grandi \( p \) e \( q \), poi si calcola \( n = p \cdot q \) e \( \varphi(n) = (p - 1)(q - 1) \). Si seleziona quindi un esponente pubblico \( e \), tale che sia coprimo con \( \varphi(n) \), e si calcola l'esponente privato \( d \) secondo la formula \( d = \frac{k \cdot \varphi(n) + 1}{e} \), con \( k \) intero. La chiave pubblica è \( (n, e) \), mentre la chiave privata è \( (n, d) \). Per cifrare un messaggio \( M \), si calcola \( C = M^e \mod n \). Per decifrare, si applica \( M = C^d \mod n \). Per comprendere perché la decifratura restituisce il messaggio originale, consideriamo \( C^d \mod n = M^{ed} \mod n \). Poiché \( ed = k \cdot \varphi(n) + 1 \), allora \( M^{ed} \mod n = M^{k \cdot \varphi(n) + 1} \mod n = M^{k \cdot \varphi(n)} \cdot M \mod n \). Se \(\gcd(M, n) = 1 \), allora per il teorema di Eulero \( M^{\varphi(n)} \mod n = 1 \), quindi \( M^{k \cdot \varphi(n)} \cdot M \mod n = M \mod n \), e il messaggio originale viene correttamente recuperato.
+          <p>Si scelgono due numeri primi grandi \( p \) e \( q \), poi si calcola \( n = p \cdot q \) e \( \varphi(n) = (p - 1)(q - 1) \). Si seleziona quindi un esponente pubblico \( e \), tale che sia coprimo con \( \varphi(n) \), e si calcola l'esponente privato \( d \) secondo la formula \( d = \frac{k \cdot \varphi(n) + 1}{e} \), con \( k \) intero. <b>La chiave pubblica è</b> \( (n, e) \), mentre <b>la chiave privata è</b> \( (n, d) \). Per cifrare un messaggio \( M \), si calcola \( C = M^e \mod n \). Per decifrare, si applica \( M = C^d \mod n \). Per comprendere perché la decifratura restituisce il messaggio originale, consideriamo \( C^d \mod n = M^{ed} \mod n \). Poiché \( ed = k \cdot \varphi(n) + 1 \), allora \( M^{ed} \mod n = M^{k \cdot \varphi(n) + 1} \mod n = M^{k \cdot \varphi(n)} \cdot M \mod n \). Se \(\gcd(M, n) = 1 \), allora per il <em>teorema di Eulero</em> \( M^{\varphi(n)} \mod n = 1 \), quindi \( M^{k \cdot \varphi(n)} \cdot M \mod n = M \mod n \), e il <b>originale viene correttamente recuperato.</b>
           </p>
         </div>
       </div>
@@ -226,12 +226,12 @@ Il mittente cifra il messaggio con la chiave pubblica del destinatario, che può
           
           <h1 class="leftanim">La crittografia ibrida
           </h1>
-          <p class="tanim">Poiché gli algoritmi di crittografia asimmetrica sono molto più lenti rispetto a quelli simmetrici, in pratica si utilizza una crittografia ibrida: 
+          <p class="tanim">Poiché gli <b>algoritmi di crittografia asimmetrica sono molto più lenti</b> rispetto a quelli simmetrici, in pratica si utilizza una <b>crittografia ibrida: </b>
 il messaggio viene cifrato con un algoritmo simmetrico veloce, mentre la chiave di sessione usata per cifrarlo viene a sua volta cifrata con RSA (crittografia asimmetrica).
- In questo modo si combina l'efficienza della crittografia simmetrica con la sicurezza nello scambio delle chiavi garantita dalla crittografia asimmetrica.</p>
+ In questo modo <b>si combina l'efficienza della crittografia simmetrica con la sicurezza</b> nello scambio delle chiavi garantita dalla crittografia asimmetrica.</p>
             <h1 class="ranim">Le funzioni di Hash
           </h1>
-          <p class="tanim">Le funzioni di hash vengono utilizzate per garantire l'integrità dei messaggi. Una funzione di hash trasforma un messaggio di qualsiasi lunghezza in una stringa a lunghezza fissa, non reversibile. Prima dell'invio, si calcola l’hash del messaggio, lo si cifra con la chiave privata del mittente e lo si allega al messaggio cifrato. Il destinatario, una volta ricevuto il messaggio, decifra l’hash con la chiave pubblica del mittente e lo confronta con l’hash calcolato dal messaggio ricevuto. Se i due valori coincidono, si ha la certezza che il messaggio non è stato alterato. Le funzioni di hash sono fondamentali anche per la gestione delle password: nei database, infatti, non viene salvata la password in chiaro, ma solo il suo hash. Durante l’accesso, l’hash della password inserita viene confrontato con quello salvato. In questo modo, nemmeno gli amministratori del sistema conoscono le password originali degli utenti.
+          <p class="tanim">Le funzioni di hash vengono utilizzate per <b>garantire l'integrità</b> dei messaggi. Una funzione di hash trasforma un messaggio di qualsiasi lunghezza in una stringa a lunghezza fissa, non reversibile. Prima dell'invio, si calcola l’hash del messaggio, lo si cifra con la chiave privata del mittente e lo si allega al messaggio cifrato. Il destinatario, una volta ricevuto il messaggio, decifra l’hash con la chiave pubblica del mittente e lo confronta con l’hash calcolato dal messaggio ricevuto. Se i due valori coincidono, si ha la certezza che il messaggio non è stato alterato. Le funzioni di hash sono fondamentali anche per la gestione delle password: nei database, infatti, non viene salvata la password in chiaro, ma solo il suo hash. Durante l’accesso, l’hash della password inserita viene confrontato con quello salvato. In questo modo, <b>nemmeno gli amministratori del sistema conoscono le password originali degli utenti.</b>
 
 </p>
         </div>
