--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
         <div class="sezR_left">
           <p>
-           Nel 1977, <em>Ron Rivest, Adi Shamir e Leonard Adleman</em> svilupparono l'<b>algoritmo RSA</b>.
-A differenza della crittografia simmetrica, che richiede una chiave segreta condivisa, la crittografia asimmetrica <b>usa una coppia di chiavi:</b>
-una <b>pubblica</b>, da distribuire liberamente, e una <b>privata</b>, da mantenere segreta.
+           Nel 1977, <em>Ron Rivest, Adi Shamir e Leonard Adleman</em> svilupparono l'<em>algoritmo RSA</em>.
+A differenza della crittografia simmetrica, che richiede una chiave segreta condivisa, la crittografia asimmetrica <em>usa una coppia di chiavi:</em>
+una <em>pubblica</em>, da distribuire liberamente, e una <em>privata</em>, da mantenere segreta.
 Il mittente cifra il messaggio con la chiave pubblica del destinatario, che può decifrarlo solo con la propria chiave privata.
           </p>
         </div>
@@ -247,7 +247,11 @@ Posta Elettronica<br> Certificata
 
 
 
-          <p class="animatep">Un sistema che garantisce valore legale alle email, come una raccomandata con ricevuta di ritorno. Utilizzata in Italia, Svizzera e Hong Kong, attesta l'invio, la ricezione e l'orario esatto di trasmissione. Per attivarla, bisogna rivolgersi a un ente accreditato che verifica l'identità del richiedente. Durante l'invio, la PEC applica una firma elettronica per assicurare l'autenticità del messaggio.</p>
+          <p class="animatep"><strong>Un sistema che garantisce valore legale alle email, come una raccomandata con ricevuta di ritorno.</strong> 
+Utilizzata in <strong>Italia</strong>, <strong>Svizzera</strong> e <strong>Hong Kong</strong>, attesta l'invio, la ricezione e l'orario esatto di trasmissione. 
+Per attivarla, bisogna rivolgersi a <strong>un ente accreditato che verifica l'identità del richiedente</strong>. 
+Durante l'invio, la <strong>PEC applica una firma elettronica</strong> per assicurare l'autenticità del messaggio.
+</p>
 
         </div>
         <div class="sezfinal_right">
@@ -255,7 +259,10 @@ Posta Elettronica<br> Certificata
 Certification <br>Authority
           </h2>
 
-          <p class="animatep">Enti autorizzati che rilasciano certificati digitali, fondamentali per garantire l'identità degli utenti e dei server online. Operano seguendo norme europee e standard internazionali come X.509. I certificati digitali permettono di avviare comunicazioni sicure e cifrate, proteggendo i dati trasmessi. In Italia, l'accreditamento delle CA è gestito dall'AgID (Agenzia per l’Italia Digitale).</p>
+          <p class="animatep"><strong>Enti autorizzati</strong> che rilasciano <strong>certificati digitali</strong>, fondamentali per garantire l'identità degli utenti e dei server online.  
+Operano seguendo <strong>norme europee</strong> e <strong>standard internazionali</strong> come <strong>X.509</strong>.  
+I certificati digitali permettono di avviare <strong>comunicazioni sicure e cifrate</strong>, proteggendo i dati trasmessi.  
+In Italia, l'accreditamento delle CA è gestito dall'<em>AgID (Agenzia per l’Italia Digitale)</em>.</p>
 
         </div>
       </div>
