--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           <h1>NEL WEB</h1>
         </div>
         <div class="subtitle">
-          <h3>THE POWER</h3>
-          <h3>OF DEFENCE</h3>
+          <h3>Giulio Areste Francesco Gissara Giulio Mangiafico</h3>
         </div>
       </div>
 
