--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           </p>
         </div>
       </div>
-      <div class="sez sez_center">
+      <div class="sez sez_center_new">
 
         <h1 class="leftanim">La crittografia ibrida
         </h1>
@@ -305,7 +305,7 @@
 
         </p>
       </div>
-
+      
       <div class="sezfinal sez">
         <div class="sezfinal_left">
           <h2 class="animate_title">
