PORCO DIO BASTA
BASTATAASATDTASDTASTDTASDASDA

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <h1>NEL WEB</h1>
         </div>
         <div class="subtitle">
-          <h3>Giulio Areste Francesco Gissara Giulio Mangiafico</h3>
+          <h3>Giulio Areste</h3>
+          <h3>Francesco Gissara</h3>
+          <h3>Giulio Mangiafico</h3>
         </div>
       </div>
 
