--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
 
         </p>
       </div>
-      
+
       <div class="sezfinal sez">
         <div class="sezfinal_left">
           <h2 class="animate_title">
-            Posta Elettronica<br> Certificata
+            Posta <br>Elettronica<br> Certificata
           </h2>
 
 
